--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"axios": "^1.7.4",
 		"class-variance-authority": "^0.7.0",
+		"cva": "^0.0.0",
 		"js-cookie": "^3.0.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
