feat: adding path aliases to project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
 		"paths": {
 			"@ui/*": ["components/*"],
 			"@context/*": ["context/*"],
-			"@src/*": ["*"]
+			"@src/*": ["*"],
+			"@atoms/*": ["/src/components/atoms/*"],
+			"@molecules/*": ["/src/components/molecules/*"],
+			"@organism/*": ["/src/components/organism/*"],
+			"@pages/*": ["/src/components/pages/*"]
 		},
 
 		/* Bundler mode */
